se agrega metodo para leer 1 post con volley

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MyWeatherAPP</string>
+    <string name="body">Body</string>
+    <string name="enviar">enviar</string>
+    <string name="userid">User ID</string>
+    <string name="title">Title</string>
 </resources>
